--- a/frontend/pages/settings.html
+++ b/frontend/pages/settings.html
@@ -51,8 +51,9 @@
         <div class="max-w-3xl mx-auto px-4 lg:px-10 py-6 lg:py-12">
             <!-- Header -->
             <header class="mb-8 lg:mb-12 bg-transparent">
-                <h1 class="text-2xl lg:text-4xl font-bold tracking-tight">Settings</h1>
-                <p class="text-slate-500 mt-1 text-sm lg:text-base">Configure your device identity and interface
+                <h1 class="text-2xl lg:text-4xl font-bold tracking-tight text-[var(--text-main)]">Settings</h1>
+                <p class="text-[var(--text-muted)] mt-1 text-sm lg:text-base">Configure your device identity and
+                    interface
                     preferences</p>
             </header>
 
@@ -60,7 +61,7 @@
             <div class="space-y-6 lg:space-y-8">
 
                 <!-- Identity Section -->
-                <section class="settings-card">
+                <section class="settings-card light-card">
                     <div class="flex items-center gap-3 mb-6 lg:mb-8">
                         <span class="material-symbols-outlined text-primary">badge</span>
                         <h3
@@ -71,32 +72,36 @@
                     <div class="space-y-4 lg:space-y-6">
                         <div>
                             <label for="device_name"
-                                class="block text-[10px] lg:text-xs font-black uppercase tracking-[0.15em] text-slate-400 mb-2 pl-1">
+                                class="block text-[10px] lg:text-xs font-black uppercase tracking-[0.15em] text-[var(--text-muted)] mb-2 pl-1">
                                 Device Display Name
                             </label>
                             <div class="flex gap-2">
                                 <input
-                                    class="flex-1 px-5 py-3 lg:py-4 text-base bg-slate-50 border-2 border-slate-200 rounded-xl focus:ring-0 focus:border-primary outline-none transition-all placeholder-slate-300 font-medium text-slate-700"
+                                    class="flex-1 px-5 py-3 lg:py-4 text-base bg-[var(--bg-main)] border-2 border-[var(--border-color)] rounded-xl focus:ring-0 focus:border-primary outline-none transition-all placeholder-slate-400 font-medium text-[var(--text-main)]"
                                     id="device_name" placeholder="Enter device name..." type="text" />
 
                                 <button onclick="saveConfiguration()" id="save-device-btn" disabled
-                                    class="bg-primary text-white font-bold px-6 rounded-xl shadow-lg shadow-primary/20 hover:brightness-105 active:scale-95 transition-all flex items-center gap-2 disabled:bg-slate-200 disabled:text-slate-400 disabled:cursor-not-allowed disabled:shadow-none">
+                                    class="bg-primary text-white font-bold px-6 rounded-xl shadow-lg shadow-primary/20 hover:brightness-105 active:scale-95 transition-all flex items-center gap-2 disabled:bg-[var(--border-color)] disabled:text-[var(--text-muted)] disabled:cursor-not-allowed disabled:shadow-none">
                                     <span class="hidden sm:inline">Save</span>
                                     <span class="material-symbols-outlined text-xl">save</span>
                                 </button>
                             </div>
-                            <p class="text-xs text-slate-400 mt-2 pl-1">This name will be visible to other users.</p>
+                            <p class="text-xs text-[var(--text-muted)] mt-2 pl-1">This name will be visible to other
+                                users.</p>
                         </div>
 
                         <div
-                            class="flex items-center justify-between p-4 lg:p-5 bg-slate-50 rounded-xl border border-transparent hover:border-slate-200 transition-all">
+                            class="flex items-center justify-between p-4 lg:p-5 bg-[var(--bg-main)] rounded-xl border border-transparent hover:border-[var(--border-color)] transition-all">
                             <div class="flex items-center gap-3 lg:gap-4">
-                                <div class="w-10 h-10 flex items-center justify-center bg-white rounded-lg shadow-sm">
-                                    <span class="material-symbols-outlined text-slate-400">visibility</span>
+                                <div
+                                    class="w-10 h-10 flex items-center justify-center bg-[var(--card-bg)] rounded-lg shadow-sm">
+                                    <span class="material-symbols-outlined text-[var(--text-muted)]">visibility</span>
                                 </div>
                                 <div>
-                                    <span class="font-bold text-sm lg:text-base text-slate-900">Discoverable</span>
-                                    <p class="text-xs lg:text-sm text-slate-500">Visible to others on your local network
+                                    <span
+                                        class="font-bold text-sm lg:text-base text-[var(--text-main)]">Discoverable</span>
+                                    <p class="text-xs lg:text-sm text-[var(--text-muted)]">Visible to others on your
+                                        local network
                                     </p>
                                 </div>
                             </div>
@@ -105,26 +110,26 @@
                         </div>
 
                         <!-- Backup & Restore -->
-                        <div class="pt-2 border-t border-slate-100">
+                        <div class="pt-2 border-t border-[var(--border-color)]">
                             <label
-                                class="block text-[10px] lg:text-xs font-black uppercase tracking-[0.15em] text-slate-400 mb-3 pl-1">
+                                class="block text-[10px] lg:text-xs font-black uppercase tracking-[0.15em] text-[var(--text-muted)] mb-3 pl-1">
                                 Account Security
                             </label>
                             <div class="grid grid-cols-2 gap-3">
                                 <button onclick="backupIdentity()"
-                                    class="flex items-center justify-center gap-2 px-4 py-3 bg-white border-2 border-slate-200 text-slate-700 rounded-xl font-bold hover:bg-slate-50 hover:border-slate-300 transition-all">
+                                    class="flex items-center justify-center gap-2 px-4 py-3 bg-[var(--card-bg)] border-2 border-[var(--border-color)] text-[var(--text-main)] rounded-xl font-bold hover:bg-[var(--bg-main)] hover:border-[var(--text-muted)] transition-all">
                                     <span class="material-symbols-outlined text-xl">download</span>
                                     <span class="text-sm">Backup Keys</span>
                                 </button>
                                 <button onclick="document.getElementById('import-key-file').click()"
-                                    class="flex items-center justify-center gap-2 px-4 py-3 bg-white border-2 border-slate-200 text-slate-700 rounded-xl font-bold hover:bg-slate-50 hover:border-slate-300 transition-all">
+                                    class="flex items-center justify-center gap-2 px-4 py-3 bg-[var(--card-bg)] border-2 border-[var(--border-color)] text-[var(--text-main)] rounded-xl font-bold hover:bg-[var(--bg-main)] hover:border-[var(--text-muted)] transition-all">
                                     <span class="material-symbols-outlined text-xl">upload</span>
                                     <span class="text-sm">Restore Keys</span>
                                 </button>
                             </div>
                             <input type="file" id="import-key-file" accept=".json" class="hidden"
                                 onchange="restoreIdentity(this)" />
-                            <p class="text-xs text-slate-400 mt-2 pl-1">
+                            <p class="text-xs text-[var(--text-muted)] mt-2 pl-1">
                                 Backup your keys to access your account on other browsers.
                             </p>
                         </div>
@@ -132,7 +137,7 @@
                 </section>
 
                 <!-- Appearance Section -->
-                <section class="settings-card">
+                <section class="settings-card light-card">
                     <div class="flex items-center gap-3 mb-6 lg:mb-8">
                         <span class="material-symbols-outlined text-primary">palette</span>
                         <h3
